Added images folder and put them in the page

--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
 
 								<article class="item thumb span-1">
 									<h2>Plane Window</h2>
-									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
+									<a href="images/Images/planewindow.jpg" class="image"><img src="images/Images/planewindow.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>Airport</h2>
-									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
+									<a href="images/Images/airport.jpg" class="image"><img src="images/Images/airport.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>Mountain Milky Way</h2>
-									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
+									<a href="images/Images/milkywaymountain.jpg" class="image"><img src="images/Images/milkywaymountain.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>Calgary</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
+									<a href="images/Images/calgary.jpg" class="image"><img src="images/Images/calgary.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
 									<h2>sunset</h2>
-									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
+									<a href="images/Images/sunset.jpg" class="image"><img src="images/Images/sunset.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
 									<h2>car</h2>
-									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
+									<a href="images/Images/car.jpg" class="image"><img src="images/Images/car.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>train</h2>
-									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
+									<a href="images/Images/train.jpg" class="image"><img src="images/Images/train.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
 									<h2>run</h2>
-									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
+									<a href="images/Images/run.jpg" class="image"><img src="images/Images/run.jpg" alt=""></a>
 								</article>
 
 							</div>
